force-app/main/default/objects/UserStat__c/UserStat__c.object-meta.xml
<CustomObject>
    <description>Stores data about current progress of the user</description>
    <label>User Stat</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>