force-app/main/default/objects/UserStat__c/fields/Achievement__c.field-meta.xml
<CustomField>
    <fullName>Achievement__c</fullName>
    <description>Achievement reference</description>
    <label>Achievement</label>
    <referenceTo>Achievement__c</referenceTo>
    <relationshipLabel>User Stats</relationshipLabel>
    <relationshipName>UserStats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>