force-app/main/default/objects/UserStat__c/fields/CurrentProgress__c.field-meta.xml
<CustomField>
    <fullName>CurrentProgress__c</fullName>
    <label>Current Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>