force-app/main/default/objects/UserStat__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <formula>CASESAFEID(UserId__r.Id) + &apos;-&apos; +  CASESAFEID(Achievement__r.Id)</formula>
    <label>Key</label>
    <type>Text</type>
</CustomField>