force-app/main/default/objects/UserStat__c/fields/Reached__c.field-meta.xml
<CustomField>
    <fullName>Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true, in case achievement was reached by user</description>
    <label>Reached</label>
    <type>Checkbox</type>
</CustomField>